--- a/package.json
+++ b/package.json
@@ -8,15 +8,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/three": "^9.3.1",
+    "@react-spring/types": "^9.3.1",
+    "@react-spring/web": "^9.3.1",
+    "@react-three/drei": "^7.25.4",
+    "@react-three/fiber": "^7.0.21",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "three": "^0.135.0"
   },
   "devDependencies": {
     "@types/node": "16.11.11",
     "@types/react": "17.0.37",
+    "@types/three": "^0.134.0",
+    "autoprefixer": "^10.4.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
+    "postcss": "^8.4.4",
+    "tailwindcss": "^2.2.19",
     "typescript": "4.5.2"
   }
 }
